--- a/src/style/common.css
+++ b/src/style/common.css
@@ -1,25 +1,88 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html, body, #app {
     width: 100%;
     height: 100%;
 }
 
+ul, li {
+    list-style: none;
+}
+
+h4 {
+    font-weight: 400;
+}
+
 body {
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100%;
     background: url('@/assets/images/bg.jpg') no-repeat;
-    background-size: cover;
+    background-size: 1920px 1080px;
+    line-height: 1.15;
+    font-size: 0.5rem;
 }
+
+.viewport {
+    max-width: 1920px;
+    min-width: 1024px;
+    /*min-height: 780px;*/
+    height: 100%;
+    margin: 0 auto;
+    background: url('@/assets/images/logo.png') no-repeat;
+    background-size: contain;
+    color: #fff;
+    display: flex;
+    padding: 1.1rem 0.25rem 0;
+}
+
+.column {
+    flex: 3;
+}
+
+.column:nth-child(2) {
+    flex: 4;
+    margin: 0.4rem 0.25rem 0;
+}
+
+.panel {
+    position: relative;
+    border: 15px solid transparent;
+    border-width: 0.6375rem 0.475rem 0.25rem 1.65rem;
+    border-image-source: url("@/assets/images/border.png");
+    border-image-repeat: round;
+    border-image-slice: 51 38 20 132;
+    margin-bottom: 0.25rem;
+}
+
+.inner {
+    position: absolute;
+    top: -0.6375rem;
+    right: -0.475rem;
+    bottom: -0.25rem;
+    left: -1.65rem;
+    padding: 0.3rem 0.45rem;
+}
+
 
 /*屏幕分辨率小于1024*/
 @media screen and (max-width: 1024px) {
     html {
-        font-size: 92.66px !important;
+        font-size: 42.66px !important;
+    }
+
+    body {
+
     }
 }
 
 /*屏幕分辨率大雨1920*/
 @media screen and (min-width: 1920px) {
     html {
-        font-size: 180px !important;
+        font-size: 80px !important;
     }
 }
