--- a/src/style/index.css
+++ b/src/style/index.css
@@ -20,10 +20,137 @@
 
 .monitor {
     height: 6rem;
+
 }
+
+.monitor .inner {
+    display: flex;
+    flex-direction: column;
+    padding: .3rem 0;
+}
+
+.monitor .tabs {
+    display: flex;
+    /*padding: 0.125rem 0;*/
+    padding: 0 .45rem;
+    margin-bottom: .225rem;
+}
+
+.monitor .tabs span {
+    color: #1950c4;
+    font-size: 0.225rem;
+    cursor: pointer;
+    padding: 0 0.3375rem;
+}
+
+.monitor .tabs span:nth-child(1) {
+    padding-left: 0;
+    border-right: 0.0375rem solid #00f2f1;
+}
+
+.monitor span.active {
+    color: #fff;
+}
+
+.monitor .content {
+    flex: 1;
+    position: relative;
+}
+
+.monitor .content .head {
+    background: rgba(255, 255, 255, 0.2);
+    font-size: 0.2rem;
+    /*padding: .15rem .45rem;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    line-height: 1.05;
+    color: #68d8fe;
+    padding: .15rem .45rem;
+}
+
+
+.monitor .content .col:nth-child(1) {
+    width: 1rem;
+}
+
+.monitor .content .col:nth-child(2) {
+    width: 2.5rem;
+}
+
+.monitor .content .col:nth-child(3) {
+    width: 1rem;
+}
+
+.monitor .marquee-view {
+    position: absolute;
+    top: 0.5rem;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+.monitor .marquee-view .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 0.2rem;
+    line-height: 1.05;
+    color: #61a8ff;
+    padding: .15rem .45rem;
+    position: relative;
+}
+
+.monitor .marquee-view .row:hover {
+    background: rgba(255, 255, 255, 0.2);
+    color: #68d8fe;
+}
+
+.monitor .marquee-view .row:hover .icon-dot {
+    opacity: 1;
+}
+
+.monitor .marquee-view .row .icon-dot {
+    position: absolute;
+    left: .2rem;
+    opacity: 0;
+}
+
 
 .point {
     height: 4.25rem;
+}
+
+.point .inner {
+    display: flex;
+    flex-direction: column;
+}
+
+.point .inner .chart {
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.point .inner .chart .data {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2.1rem;
+    /*min-width: 130px;*/
+    padding: .45rem .375rem;
+    background: url("@/assets/images/rect.png") no-repeat;
+    background-size: cover;
+}
+
+.point .inner .chart .data h4 {
+    color: #fff;
+    font-size: .35rem;
+}
+
+.point .inner .chart .data span {
+    color: #4c9bfd;
+    font-size: .2rem;
 }
 
 .map {
