--- a/src/style/index.css
+++ b/src/style/index.css
@@ -264,6 +264,11 @@
     height: 3.1rem;
 }
 
+.sales .inner {
+    display: flex;
+    flex-direction: column;
+}
+
 .sales .caption {
     display: flex;
     align-items: center;
@@ -288,6 +293,25 @@
     color: #fff;
 }
 
+.sales .chart {
+    flex: 1;
+    padding-top: 0.1875rem;
+    position: relative;
+}
+
+.sales .chart .line {
+    width: 100%;
+    height: 100%;
+}
+
+.sales .chart .label {
+    position: absolute;
+    font-size: 0.175rem;
+    color: #4996f5;
+    left: 0.525rem;
+    top: 0.225rem;
+}
+
 .wrap {
     display: flex;
 }
@@ -297,8 +321,69 @@
     height: 2.9rem;
 }
 
+
 .channel {
     margin-right: 0.25rem;
+}
+
+.channel .data {
+    overflow: hidden;
+}
+
+.channel .data .radar {
+    width: 100%;
+    height: 2.1rem;
+}
+
+
+.quarter .inner {
+    display: flex;
+    flex-direction: column;
+}
+
+.quarter .chart {
+    flex: 1;
+    position: relative;
+    margin-top: 0.25rem;
+}
+
+.quarter .chart .gauge {
+    height: 1.05rem;
+}
+
+.quarter .chart .label {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    font-size: 0.375rem;
+    transform: translate(-50%, -40%);
+}
+
+.quarter .data {
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.quarter .data .item {
+    width: 50%;
+}
+
+.quarter .data .item h4 {
+    color: #fff;
+    font-size: 0.3rem;
+    margin-bottom: 0.125rem;
+}
+
+.quarter .data .item span {
+    font-size: 0.155rem;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #4c9bfd;
+
 }
 
 .top {
